# toyParser

./: README.md  toyParser.cabal
src/: Class.hs  Combinators.hs  Main.hs  Primitives.hs
