name:                toyParser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/toyParser#readme
license:             BSD3
license-file:        LICENSE
author:              rektrex
maintainer:          example@example.com
copyright:           2020 rektrex
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable toyParser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Class
                     , Primitives
